--- a/ansible1.yml
+++ b/ansible1.yml
@@ -17,7 +17,7 @@
     become_user: root
 
   - name: Deploy the image and run as container
-    command: docker run -itd 8084:8081 prathibha05/insureme-app:1.0
+    command: docker run -itd -p 8084:8081 prathibha05/insureme-app:1.0
   
   
   
